Refactor WikipediaByteIterator to use UTF-8 corpus